force-app/main/default/objects/ssot__CareProgramGoal__dlm/fields/ssot__CareProgramGoalStatus__c.field-meta.xml
<CustomField>
    <fullName>ssot__CareProgramGoalStatus__c</fullName>
    <label>Care Program Goal Status</label>
    <length>36</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>CareProgramGoalStatus</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>