force-app/main/default/objects/ssot__CareProgramGoal__dlm/fields/ssot__CompletionDate__c.field-meta.xml
<CustomField>
    <fullName>ssot__CompletionDate__c</fullName>
    <label>Completion Date</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>CompletionDate</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Date</type>
</CustomField>