force-app/main/default/objects/ssot__CareProgramGoal__dlm/fields/ssot__rel_1716726237487_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1716726237487_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CareProgramGoal_CareProgramId_map_Ca_rel</label>
    <referenceTo>ssot__CareProgram__dlm</referenceTo>
    <relationshipLabel>CareProgramGoal_CareProgramId_map_Ca_rel</relationshipLabel>
    <relationshipName>rel_1716726237487_end</relationshipName>
    <type>Lookup</type>
</CustomField>