force-app/main/default/objects/ssot__CareProgramGoal__dlm/fields/ssot__Type__c.field-meta.xml
<CustomField>
    <fullName>ssot__Type__c</fullName>
    <label>Type</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>Type</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>